--- a/.github/workflows/dbt_trust_check.yml
+++ b/.github/workflows/dbt_trust_check.yml
@@ -2,39 +2,43 @@ name: dbt Trust Check
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
     paths:
-      - 'models/**'
-      - 'seeds/**'
-      - 'dbt_project.yml'
+      - "models/**"
+      - "seeds/**"
+      - "dbt_project.yml"
+      - "profiles.yml"
   pull_request:
-    branches: [ main ]
+    branches: [main]
     paths:
-      - 'models/**'
-      - 'seeds/**'
-      - 'dbt_project.yml'
+      - "models/**"
+      - "seeds/**"
+      - "dbt_project.yml"
+      - "profiles.yml"
+  # Manual trigger
+  workflow_dispatch:
 
 jobs:
   dbt-test:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-        
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install dbt-core dbt-duckdb
-        
-    - name: Copy profiles.yml
-      run: |
-        mkdir -p ~/.dbt
-        cp profiles.yml ~/.dbt/
-        
-    - name: Run dbt build
-      run: dbt build
+      - uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install dbt-core dbt-duckdb
+
+      - name: Copy profiles.yml
+        run: |
+          mkdir -p ~/.dbt
+          cp profiles.yml ~/.dbt/
+
+      - name: Run dbt build
+        run: dbt build
